@@ -1,6 +1,7 @@
 v1.0.1
 - Add German Classification Ratings
 - Add default behaviour for unsupported certifications
+- Add support for bulk security setting
 
 v1.0.0
 - Initial Version
